--- a/css/side_bar.css
+++ b/css/side_bar.css
@@ -25,11 +25,11 @@
         position: fixed;
         top: 0;
         left: 0;
-        background-color: #e8e8e8;
+        background-color: #e9e200;
         overflow-x: hidden;
         transition: width 0.3s;
         padding-top: 60px;
-        color: white;
+        color: rgb(0, 0, 0);
         z-index: 1000;
 
         display: flex;
@@ -54,8 +54,8 @@
         /* start at left edge */
         font-size: 20px;
         cursor: pointer;
-        background: #0078d7;
-        color: white;
+        background: #000000;
+        color: rgb(255, 255, 255);
         padding: 8px 12px;
         border: none;
         transition: left 0.3s;
@@ -74,7 +74,10 @@
         align-items: center;
         /* vertically align items */
         padding: 8px;
-        border: 1px solid #ccc;
+        border: 1px solid #000000;
+        flex: 1;
+        width: 115%;
+
         /* optional styling */
     }
 
